[package]
name = "part3"
version = "0.1.0"
edition = "2021"
authors = [
    "Nathan Rowan <rowannh@vcu.edu>",
    "Trevin Vaughan <vaughantd@vcu.edu>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = [
    "derive",
] } # parses command line arguments (similarly to Unix getopts)
colored = "2.1.0"
